--- a/index.html
+++ b/index.html
@@ -49,17 +49,16 @@
 								<h2 class="header-about">About Me</h2>
 								<div class="about">
 									<section class="s1">
-										<pp><span style="font-size:23px;" >&ensp;You can call me Chloe.
+										<pp><span style="font-size:17px;" >&ensp;You can call me Chloe.
 											People say I don't look like a 20-year-old, do you feel the same?</span></pp>
 
-										<pp><span style="font-size:13px;" >&ensp;I love pink so much and I like drawing too!
+										<pp><span style="font-size:17px;" >&ensp;I love pink so much and I like drawing too!
 											&nbsp;I am very talkative. Hope I can collaborate with more experienced web developers! &#128518</span></pp>
-										<pp><span style="font-size:23px;" >&ensp;I am now studying AI and FinTech in Hong Kong. Currently, I am learning details on HTML/CSS and Japanese.
+										<pp><span style="font-size:17px;" >&ensp;I am now studying AI and FinTech in Hong Kong. Currently, I am learning details on HTML/CSS and Japanese.
 											<span style="font-size:18px; color: #FF9F6E" >はじめまして！</span> </span></pp>
-										<pp><span style="font-size:23px;" ></span></pp>
-										<pp class="pp1">&ensp;<span style="font-size:30px" >
+										<pp class="pp1">&ensp;<span style="font-size:23px" >
 											Want to know more about my previous work?</span></pp>
-										<pp class="pp2">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+										<pp class="pp2">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 											click the folder above &#8593;</pp>
 										<pp class="pp1"><span style="font-size:30px; color:#e34c4c" >Technical skills:</span></pp>
 										<pp><span style="font-size:20px; color:#e34c4c" >Programming languages: SQL, Python, Java, C, HTML, CSS</span></pp>
