--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 												We had argue but always keep in mind that we are a team and things can be solved. </pp>
 										</div>
 										<div class="col-12 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/clockwise.jpg" alt="" ></a>
+											<a class="image fit"><img src="images/clockwise.JPG" alt="" ></a>
 										</div>
 									</div>
 							<!-- 2017 -->
