--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<article id="home" class="panel intro">
 									<header>
 										<h1>Chloe Yip</h1>
-										<p>Hong Kong Polytechnic University year 3 student</p>
+										<p>Hong Kong Polytechnic University year 4 student</p>
 										<p class="self">studying Financial Technology and Artificial Intellgence</p>
 									</header>
 								<a href="#contact" class="jumplink pic">
@@ -52,16 +52,16 @@
 										<pp><span style="font-size:17px;" >&ensp;You can call me Chloe.
 											People say I don't look like a 20-year-old, do you feel the same?</span></pp>
 
-										<pp><span style="font-size:17px;" >&ensp;I love pink so much and I like drawing too!
-											&nbsp;I am very talkative. Hope I can collaborate with more experienced web developers! &#128518</span></pp>
-										<pp><span style="font-size:17px;" >&ensp;I am now studying AI and FinTech in Hong Kong. Currently, I am learning details on HTML/CSS and Japanese.
-											<span style="font-size:18px; color: #FF9F6E" >はじめまして！</span> </span></pp>
+										<pp><span style="font-size:17px;" >&ensp;I love pink so much and I like designing too!
+											&nbsp;I am very talkative. Hope I can collaborate with more experienced developers and engineers! &#128518</span></pp>
+										<pp><span style="font-size:17px;" >&ensp;I am now studying AI and FinTech in Hong Kong. Currently, I am self-studing React js and 3D modeling.
+											
 										<pp class="pp1">&ensp;<span style="font-size:23px" >
 											Want to know more about my previous work?</span></pp>
 										<pp class="pp2">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 											click the folder above &#8593;</pp>
 										<pp class="pp1"><span style="font-size:30px; color:#e34c4c" >Technical skills:</span></pp>
-										<pp><span style="font-size:20px; color:#e34c4c" >Programming languages: SQL, Python, Java, C, HTML, CSS</span></pp>
+										<pp><span style="font-size:20px; color:#e34c4c" >Programming languages: SQL, Python, Java, JavaScript, C#, HTML, CSS</span></pp>
 										<pp><span style="font-size:20px; color:#e34c4c" >Microsoft knowledge: Microsoft Word, Microsoft Excel, Microsoft Access</span></pp>
 									</section>
 									<aside class="right">
